Commit 3 - fixed website contrast

--- a/A5 - web accessibility/assessment-files/style.css
+++ b/A5 - web accessibility/assessment-files/style.css
@@ -28,12 +28,12 @@ body {
 
 font[size="7"], font[size="6"], font[size="5"] {
   font-family: 'Sonsie One', cursive;
-  color: #2a2a2a;
+  color: black;
 }
 
 p, input, li, table, label {
   font-family: 'Open Sans Condensed', sans-serif;
-  color: #2a2a2a;
+  color: black;
 }
 
 font[size="7"] {
@@ -60,7 +60,7 @@ p, li, table {
 /* || header layout */
 
 div[class="nav"], article, footer, .secondary {
-  background-color: green;
+  background-color: white;
 }
 
 article, footer, .secondary {
